@@ -23,6 +23,8 @@ documents those changes that are of interest to users and admins.
  -- Add slurm_*_trigger.3 man pages for event trigger APIs.
  -- Fix bug in job preemption logic that would free allocated memory twice.
  -- Fix spelling issues (from Gennaro Oliva)
+ -- Fix issue when changing parents of an account in accounting all childern
+    weren't always sent to their respected slurmctlds until a restart.
 
 * Changes in SLURM 2.1.0
 =============================
